--- a/src/components/Meta.astro
+++ b/src/components/Meta.astro
@@ -100,7 +100,7 @@ const appleTouchIcon = await getImage({
 <meta property="og:url" content={URL} />
 <meta property="og:type" content="website" />
 <meta property="og:title" content={ogTitle} />
-<meta property="og:site_name" content={SITE.title} />
+<meta property="og:site_name" content={"Nobda - Find Internships, Jobs & Scholarships"} />
 <meta property="og:description" content={ogDescription} />
 <meta property="og:image" content={socialImage} />
 <meta content="1200" property="og:image:width" />
