--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -40,7 +40,7 @@ import dashboard from "@images/dashboard-image.avif";
     heading: "اكتشاف الفرص",
     content:
       "من المنح الدراسية إلى التدريبات وبرامج الدكتوراه وإعلانات الوظائف، توفر منصتنا مجموعة واسعة من الفرص التي تلبي مختلف المجالات والمراحل المهنية. اكتشف ما يناسبك واتخذ الخطوة التالية في مسيرتك المهنية.",
-    svg: "tools",
+    svg: "globe",
     src: tools,
     alt: "معدات ثقيلة صفراء وسوداء على أرض عشبية بنية",
     first: true,
@@ -49,7 +49,7 @@ import dashboard from "@images/dashboard-image.avif";
     heading: "ماذا نقدم في نبذة؟",
     content:
       "تقدم نبذة مجموعة واسعة من الخدمات، بما في ذلك الوصول إلى الفرص التعليمية مثل المنح الدراسية، الزمالات، التبادلات الثقافية، وبرامج الدكتوراه الممولة والمؤتمرات. كما نوفر إعلانات للوظائف والتدريبات. عبر منصتنا، يمكنك التقديم على فرص مختارة بدعم من فريقنا. بالإضافة إلى ذلك، نقدم جلسات استشارة شخصية واختبارات لاكتشاف المسارات الأكاديمية والمهنية المناسبة.",
-    svg: "dashboard",
+    svg: "target",
     src: dashboard,
     alt: "لقطة شاشة أو تمثيل رسومي للوحة تحكم سهلة الاستخدام",
     second: true,
