--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ import dashboard from "@images/dashboard-image.avif";
         heading: "Discover Opportunities",
         content:
           "From scholarships to internships, PhD programs, and job openings, our platform offers a wide range of opportunities that cater to various fields and career stages. Find what suits you best and take the next step in your professional journey.",
-        svg: "tools",
+        svg: "globe",
         src: tools,
         alt: "Yellow and black heavy equipment on brown grass field",
         first: true,
@@ -50,7 +50,7 @@ import dashboard from "@images/dashboard-image.avif";
         heading: "What do we offer at nobda ?",
         content:
           "Nobda offers a wide range of services, including access to educational opportunities such as scholarships, fellowships, cultural exchanges, funded PhD programs, and conferences. It also provides job and internship listings. Through For9a, you can apply to selected opportunities with the support of our team. Additionally, we offer personalized counseling sessions and a personality test to help users discover suitable academic and career paths.",
-        svg: "dashboard",
+        svg: "target",
         src: dashboard,
         alt: "A screenshot or graphic representation of the intuitive dashboard",
         second: true,
