--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -56,7 +56,7 @@ We set the language of the page to English and add classes for scrollbar and scr
     -->
     <div class="mx-auto max-w-screen-2xl px-4 sm:px-6 lg:px-8">
       <Navbar />
-      <main dir={lang=='fr' ? "rtl" : "ltr"} >
+      <main>
         <slot />
       </main>
     </div>
