--- a/src/components/ui/LanguagePicker.astro
+++ b/src/components/ui/LanguagePicker.astro
@@ -49,8 +49,8 @@ import Icon from "./icons/Icon.astro";
 </script>
 
 <script>
-type TLanguage = "en" | "ar";
-const languages: TLanguage[] = ["en","ar"];
+type TLanguage = "ar" | "en";
+const languages: TLanguage[] = ["ar","en"];
 
 document.addEventListener("DOMContentLoaded", function () {
   const languageLinks = document.querySelectorAll(".hs-dropdown-menu a");
