--- a/src/pages/ar/insights/[...slug].astro
+++ b/src/pages/ar/insights/[...slug].astro
@@ -136,7 +136,7 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
   </p>
     <!-- Conditional rendering of PrimaryCTA component if 'btnExists' property is truthy -->
     <div style="display: flex; justify-content: center; gap: 10px; margin-top: 15px;">
-      <a href="https://t.me/nobdalive" style="background-color: #0088CC; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; display: inline-block;">انضم إلينا على Telegram</a>
+      <a href="https://t.me/nobdaforyou" style="background-color: #0088CC; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; display: inline-block;">انضم إلينا على Telegram</a>
       <a href="https://www.youtube.com/@Nobda-x7y" style="background-color: #FF0000; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; display: inline-block;">انضم إلينا على YouTube</a>
     </div>
   </div>
