--- a/src/components/sections/ar/ContactSection_ar.astro
+++ b/src/components/sections/ar/ContactSection_ar.astro
@@ -134,8 +134,8 @@ const ringClasses = "ring-zinc-500 dark:ring-zinc-200";
         heading="التواصل معنا عبر البريد الإلكتروني"
         content="تفضل التواصل كتابيًا؟ أرسل لنا بريدًا إلكترونيًا على"
         isLinkVisible={true}        
-        linkTitle="Nobdateam77@gmail.com"
-        linkURL="mailto:Nobdateam77@gmail.com"
+        linkTitle="nobda.contact7@gmail.com"
+        linkURL="mailto:nobda.contact7@gmail.com"
           ><Icon name="envelopeOpen" />
         </ContactIconBlock>
       </div>
