--- a/src/components/sections/misc/ContactSection.astro
+++ b/src/components/sections/misc/ContactSection.astro
@@ -92,7 +92,7 @@ const ringClasses = "ring-zinc-500 dark:ring-zinc-200";
 
           <div class="mt-4 grid">
             <a
-            :href="`mailto:Nobdateam77@gmail.com?subject=Hello%20from%20${firstName}%20${lastName}&body=${body}`"
+            :href="`mailto:nobda.contact7@gmail.com?subject=Hello%20from%20${firstName}%20${lastName}&body=${body}`"
             class={`${baseClasses} ${borderClasses} ${bgColorClasses} ${hoverClasses} ${fontSizeClasses} ${disabledClasses} ${ringClasses}`}
             >
             {title}
@@ -131,8 +131,8 @@ const ringClasses = "ring-zinc-500 dark:ring-zinc-200";
           heading="Contact us by email"
           content="Prefer the written word? Drop us an email at"
           isLinkVisible={true}
-          linkTitle="Nobdateam77@gmail.com"
-          linkURL="mailto:Nobdateam77@gmail.com"
+          linkTitle="nobda.contact7@gmail.com"
+          linkURL="mailto:nobda.contact7@gmail.com"
           ><Icon name="envelopeOpen" />
         </ContactIconBlock>
       </div>
