--- a/src/components/sections/ar/ContactSection_ar.astro
+++ b/src/components/sections/ar/ContactSection_ar.astro
@@ -95,7 +95,7 @@ const ringClasses = "ring-zinc-500 dark:ring-zinc-200";
 
           <div class="mt-4 grid">
             <a
-            :href="`mailto:Nobdateam77@gmail.com?subject=Hello%20from%20${firstName}%20${lastName}&body=${body}`"
+            :href="`mailto:nobda.contact7@gmail.com?subject=Hello%20from%20${firstName}%20${lastName}&body=${body}`"
             class={`${baseClasses} ${borderClasses} ${bgColorClasses} ${hoverClasses} ${fontSizeClasses} ${disabledClasses} ${ringClasses}`}
             >
             {"تواصل معنا"}
