--- a/src/pages/ar/Scholarships/index.astro
+++ b/src/pages/ar/Scholarships/index.astro
@@ -73,7 +73,20 @@ const pageTitle: string = `${title} | ${SITE.title}`;
       </p>
     </div>
   </section>
-
+  <div class="max-w-screen-md rtl-text text-center" style="display: flex; flex-direction: column; align-items: center; justify-content: center; margin: 0 auto; text-align: center; margin-top: 30px;">
+    <h3>هل اشتركت في قناة يوتيوب أو قناة تليجرام الخاصة بالفرص؟</h3>
+  
+    <!-- Section subtitle -->
+    <p class="mb-8 max-w-prose text-pretty font-light text-neutral-600 dark:text-neutral-400 sm:text-xl">
+      كن أول من يعرف عن فرصنا بمجرد نشرها.
+    </p>
+  
+    <!-- Conditional rendering of PrimaryCTA component if 'btnExists' property is truthy -->
+    <div style="display: flex; justify-content: center; gap: 10px; margin-top: 15px;">
+      <a href="https://t.me/nobdaforyou" style="background-color: #0088CC; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; display: inline-block;">انضم إلينا على Telegram</a>
+      <a href="https://www.youtube.com/@Nobda-x7y" style="background-color: #FF0000; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; display: inline-block;">انضم إلينا على YouTube</a>
+    </div>
+  </div>
   <section
     class="mx-auto max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 2xl:max-w-full"
   >
