--- a/src/pages/ar/services.astro
+++ b/src/pages/ar/services.astro
@@ -25,6 +25,19 @@ const pageTitle: string = `Services | ${SITE.title}`;
   }}
 >
 
+<div class="max-w-screen-md rtl-text text-center" style="display: flex; flex-direction: column; align-items: center; justify-content: center; margin: 0 auto; text-align: center; margin-top: 30px;">
+  <h3>هل اشتركت في قناة يوتيوب أو قناة تليجرام الخاصة بالفرص؟</h3>
+
+  <!-- Section subtitle -->
+  <p class="mb-8 max-w-prose text-pretty font-light text-neutral-600 dark:text-neutral-400 sm:text-xl">
+    كن أول من يعرف عن فرصنا بمجرد نشرها.
+  </p>
+
+  <!-- Conditional rendering of PrimaryCTA component if 'btnExists' property is truthy -->
+  <div style="display: flex; justify-content: center; gap: 10px; margin-top: 15px;  margin-bottom: 10px;">
+    <a href="https://t.me/nobdaforyou" style="background-color: #0088CC; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; display: inline-block;">انضم إلينا على Telegram</a>
+    <a href="https://www.youtube.com/@Nobda-x7y" style="background-color: #FF0000; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; display: inline-block;">انضم إلينا على YouTube</a>
+</div>
 <!-- الخدمات المدفوعة -->
 <div class="max-w-screen-md pt-20 rtl-text">   
 
@@ -39,15 +52,15 @@ const pageTitle: string = `Services | ${SITE.title}`;
   title="المساعدة في التقديم"
   subTitle="احصل على دعم شخصي من فريق خبرائنا لتحسين طلبك للمنح الدراسية، التدريبات، الوظائف أو برامج الدكتوراه، مما يزيد من فرص نجاحك."
   btnExists={true}
-  btnTitle="طلب استشارة"
-  btnURL="#"
+  btnTitle="طلب المساعدة في التقديم "
+  btnURL="https://calendly.com/nobda-contact7/meet-with-me"
 />
 <MainSection
   title="جلسات استشارية"
   subTitle="احصل على نصائح من الخبراء حول اختيار التخصص الجامعي المناسب، العثور على مسارك المهني، إعداد سيرة ذاتية مميزة، وإتقان تقنيات المقابلة. مستشارونا متخصصون في التعليم والتوظيف، مما يضمن لك الإعداد الجيد لمستقبلك."
   btnExists={true}
   btnTitle="طلب استشارة"
-  btnURL="#"
+  btnURL="https://calendly.com/nobda-contact7/meet-with-me-1"
 />
 </div>
 <!-- الخدمات المجانية -->
@@ -59,6 +72,7 @@ const pageTitle: string = `Services | ${SITE.title}`;
   </h1>
 </div>
 <div class="rtl-text">
+  
 <MainSection
   title="فرص تعليمية"
   subTitle="احصل على مجموعة واسعة من المنح الدراسية والدعم المالي المصمم لدعم مسارك الأكاديمي."
