telegram & youtube banner

--- a/src/pages/ar/Other/index.astro
+++ b/src/pages/ar/Other/index.astro
@@ -75,8 +75,7 @@ const pageTitle: string = `${title} | ${SITE.title}`;
     </div>
   </section>
   <div class="max-w-screen-md rtl-text text-center" style="display: flex; flex-direction: column; align-items: center; justify-content: center; margin: 0 auto; text-align: center; margin-top: 30px;">
-    <h3>هل اشتركت في قناة يوتيوب أو قناة تليجرام الخاصة بالفرص؟</h3>
-  
+    <h3 style="background-color: #EEC52D;">هل اشتركت في قناة يوتيوب أو قناة تليجرام الخاصة بالفرص؟</h3>
     <!-- Section subtitle -->
     <p class="mb-8 max-w-prose text-pretty font-light text-neutral-600 dark:text-neutral-400 sm:text-xl">
       كن أول من يعرف عن فرصنا بمجرد نشرها.
