--- a/src/pages/ar/insights/[...slug].astro
+++ b/src/pages/ar/insights/[...slug].astro
@@ -82,7 +82,7 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
             {post.data.title}
           </h1>
           <div class="max-w-screen-md rtl-text">
-            <h3 style="text-align: center;">هل اشتركت في قناة يوتيوب أو قناة تليجرام الخاصة بالفرص؟</h3>
+            <h3 style="text-align: center; background-color: #EEC52D;">هل اشتركت في قناة يوتيوب أو قناة تليجرام الخاصة بالفرص؟</h3>
         
             <!-- Section subtitle -->
             <p
@@ -146,7 +146,7 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
 </style>
 
   <div class="max-w-screen-md">
-    <h3 style="text-align: center;">هل اشتركت في قناة يوتيوب أو قناة تليجرام الخاصة بالفرص؟</h3>
+    <h3 style="text-align: center; ">هل اشتركت في قناة يوتيوب أو قناة تليجرام الخاصة بالفرص؟</h3>
 
     <!-- Section subtitle -->
     <p
