--- a/src/pages/ar/index.astro
+++ b/src/pages/ar/index.astro
@@ -32,7 +32,7 @@ import dashboard from "@images/dashboard-image.avif";
     alt="نبذة"
   />
   </div>
-  <div class="max-w-screen-md rtl-text text-center" style="display: flex; flex-direction: column; align-items: center; justify-content: center; margin: 0 auto; text-align: center; margin-top: 30px;">
+  <div class="max-w-screen-md rtl-text text-center" style="display: flex; flex-direction: column; align-items: center; justify-content: center; margin: 0 auto; text-align: center;">
     <h3 style="background-color: #EEC52D;">هل اشتركت في قناة يوتيوب أو قناة تليجرام الخاصة بالفرص؟</h3>
   
     <!-- Section subtitle -->
